@@ -37,8 +37,8 @@ Draw rectangles on the correlation matrix graph based on hierarchical cluster
 \examples{
 data(mtcars)
 M = cor(mtcars)
-corrplot(M, method = "circle", order = "FPC")
-corrRect(c(5,6))
+corrplot(M, method = "circle", order = "FPC") -> p
+corrRect(index = c(1, 6, 11), corrRes = p)
 
 (order.hc = corrMatOrder(M, order = "hclust"))
 (order.hc2 = corrMatOrder(M, order = "hclust", hclust.method = "ward.D2"))
