@@ -1,8 +1,10 @@
 		CHANGES IN corrplot VERSION 0.XX
 
 CHANGES
-  * Add customizable rectangles to correlation plots in corrRect().(#185, inspired by @douglaswhitaker thanks)
-  * Add `xName`, `yName` two columns in `corrPos` data frame(e.g. corrplot(...)$corrPos)
+  * Add customizable rectangles to correlation plots in corrRect().(#185, requirements from @douglaswhitaker thanks).
+  * Remove `clus`, add `index` and `name` parameters in corrRect().
+  * Add `xName`, `yName` two columns in `corrPos` data frame(e.g. corrplot(...)$corrPos).
+  * Add `arg` to the corrplot() return list.
 
 
 
